--- a/responsive.html
+++ b/responsive.html
@@ -2,7 +2,7 @@
 =========================================================
 Name : index.html
 Assignment : Lab 4 Exercise B
-Author(s) : Lana Hawa, Dylan Wenaas
+Author(s) : Hanna Cho, Alison Gartner
 Submission : February 7, 2024
 Description : Responsive Layouts.
 =========================================================
